--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,45 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Courier New', Courier, 'Times New Roman';
   background-color: rgb(230, 210, 101);
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 .title {
   text-align: center;
   font-size: 48px;
+}
+
+.odin {
+  font-size: 68px;
+  background-color: rgb(212, 87, 87);
+  padding: 10px;
+  display: inline-block;
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px;
+}
+
+.recipe-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin: 0 auto;
+  background-color: rgb(231, 230, 142);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.recipe-list li {
+  padding: 10px;
+  border: 1px dashed orange;
+  margin: 5px auto;
+  background-color: rgba(212, 87, 87, 0.233);
 }
